.golden/6097241206483808698/golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:28:
  |
7 | main = putStrLn [fmt|hello } world|]
  |                            ^
unexpected '}'
expecting "{{", "}}", '{', or end of input

    • In the quasi-quotation: [fmt|hello } world|]
  |
7 | main = putStrLn [fmt|hello } world|]
  |                      ^^^^^^^^^^^^^^^
